Update Grafana Ingress TLS secret name to 'grafana-tls'

--- a/observability/grafana-ingress.yml
+++ b/observability/grafana-ingress.yml
@@ -10,7 +10,7 @@ spec:
   tls:
     - hosts:
       -  grafana.example.com
-      secretName: whoami-tls
+      secretName: grafana-tls
   rules:
   - host: "grafana.example.com"
     http:
